Fix text align

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -20,6 +20,8 @@ h1 {
   @extend .input;
   float: right;
   background: #BBB;
+
+  text-align: left;
 }
 
 .bottom {
